# he-man

./: .gitignore  README.md  analyzer.py  cli.py  convert.py  output.csv  profiler.py  pyproject.toml
src/models/: __init__.py  blip_caption.py  depth_pro.py  detr_resnet.py  distilbert.py  distilbert_ane.py  fast_vit.py  llama_3_2_1B.py  mistral.py  model.py
src/shared/: coreml.py  runtime_analyzer.py
