[project]
name = "he-man"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=0.26.0",
    "coremltools>=8.1",
    "depth-pro",
    "matplotlib>=3.9.3",
    "onnx>=1.17.0",
    "requests>=2.32.3",
    "tabulate>=0.9.0",
    "torch>=2.5.1",
    "torchinfo>=1.8.0",
    "torchvision>=0.20.1",
    "transformers>=4.46.3",
]

[tool.uv.sources]
depth-pro = { git = "https://github.com/greenrazer/ml-depth-pro", rev = "86b79e02402335109f81464d0a0b6e18cb9c003c" }


